2016-04-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-473

	* CMakeLists.txt, src/CMakeLists.txt:

	Move all CXX11 detection into one place in toplevel CMakeLists.txt. Set
	C++11 compiler flags globally (if enabled). Set maximum template depth globally
	to 1024.

	Add Intel compiler <16.1(unreleased) to C++11 blacklist.
	In version 16.0, it does not yet support all necessary C++11 features.

	* config.h.cmake: Add CXX11_SUPPORT preprocessor definition.

	* src/main.cc, src/m_oem.cc: Use CXX11_SUPPORT preproc constant.

	* 3rdparty/Eigen/Core:

	Temporarily disable deprecated warnings in Functors.h file for
	binder1st and binder2nd when compiling with C++11 support until Eigen
	library is fixed.
	
2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-472

	* src/CMakeLists.txt Added macro to signal C++11 support.

	* m_oem.cc Fixed conditional compilation to also work in absence of
	C++11 support.

2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-471

	Small fix to Oliver's changes to make C++11 autodetection work.

	* src/m_oem.cc: Removed conditional compilation macros around x2arts method.

	* src/m_oem.cc: Forwarded display_progress argument to invlib call.

2016-04-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-470

	* src/main.cc: Display OEM/C++11 status in arts -v output.

	* src/methods.cc, src/m_oem.cc, src/CMakeLists.txt:

	Instead of removing the oem WSM completely if C++11 support is not
	available, replace it with a dummy function that output a runtime error
	to give the user information what he has to do to enable OEM. This
	makes OEM consistent with the behaviour of other optional features in
	ARTS.

2016-04-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-469

	* src/m_oem.cc (setup_xa): Had missed to add handling of
	pointing and baseline fits.

2016-04-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-468

	* src/m_oem.cc (oem_template): Added jacobian.resize(0,0); +