@@ -9,6 +9,14 @@ MatrixArchetype<Real>::MatrixArchetype(const MatrixArchetype<Real> &A)
 }
 
 template <typename Real>
+MatrixArchetype<Real>::MatrixArchetype(MatrixArchetype<Real> &&A)
+    : m(A.rows()), n(A.cols())
+{
+    data = std::forward<std::unique_ptr<Real[]>>(A.data);
+    A.resize(0,0);
+}
+
+template <typename Real>
 MatrixArchetype<Real>& MatrixArchetype<Real>::operator=(const MatrixArchetype &A)
 {
     m = A.rows();
@@ -16,6 +24,15 @@ MatrixArchetype<Real>& MatrixArchetype<Real>::operator=(const MatrixArchetype &A
 
     data = std::unique_ptr<Real[]>(new Real[m * n]);
     std::copy(&A.data[0], &A.data[n*m], &data[0]);
+}
+
+template <typename Real>
+MatrixArchetype<Real>& MatrixArchetype<Real>::operator=(MatrixArchetype &&A)
+{
+    m = A.rows();
+    n = A.cols();
+    data = std::move(A.data);
+    A.resize(0, 0);
 }
 
 template <typename Real>
