@@ -56,11 +56,15 @@ class VectorArchetype
 public:
 
     /*! The floating point type used to represent scalars. */
-    using RealType   = double;
+    using RealType   = Real;
     /*! The fundamental vector type used for the matrix algebra.*/
-    using VectorType = VectorArchetype<double>;
+    using VectorType = VectorArchetype<Real>;
     /*! The fundamental matrix type used for the matrix algebra.*/
-    using MatrixType = MatrixArchetype<double>;
+    using MatrixType = MatrixArchetype<Real>;
+    /*! The result type of multiplying an algebraic expression with this
+     * matrix from the right.
+     */
+    using ResultType = VectorArchetype<Real>;
 
     // ------------------------------- //
     //  Constructors and Destructors   //
