@@ -1,3 +1,12 @@
+2016-04-06  Simon Pfreundschuh  <simonpf@chalmers.se>
+
+	* arts-2-3-474
+
+	* 3rdparte/invlib/* invlib update.
+
+	* m_oem.cc: Optimized invlib forward model interface to avoid
+	unnecessary computation of the Jacobian.
+
 2016-04-06  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-473
